--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
     container_name: app-api
     restart: always
     ports:
-      - "8080:80"
+      - "80:80"
+    environment:
+      - ./backend/.env
